feat: pode colocar o nome do label padronizado.

--- a/src/app/shared/components/medicine-case-pillbox/medicine-case-pillbox.component.html
+++ b/src/app/shared/components/medicine-case-pillbox/medicine-case-pillbox.component.html
@@ -1,8 +1,6 @@
 <div class="widget-container">
 	<div class="widget-header">
-		<h2 class="widget-title">
-			O Formato do sua caixa de medicamentos esta assim:
-		</h2>
+		<h2 class="widget-title">{{ titleLabel }}</h2>
 	</div>
 
 	<div
