refactor: comentado feedback e informtion button, agora o logout esta no fim do sidenav e atualizado algumas coisas no styles.

--- a/src/app/shared/components/sidenav-dashboard/sidenav-dashboard.component.css
+++ b/src/app/shared/components/sidenav-dashboard/sidenav-dashboard.component.css
@@ -1,7 +1,8 @@
 .sidenav-container {
+	display: flex;
 	background-color: #313a46;
 	font-size: 30px;
-	height: 100vw;
+	height: calc(100vh - 70px);
 	width: 260px;
 	padding: 16px 0;
 	text-align: center;
@@ -10,7 +11,9 @@
 .sidenav-content {
 	display: flex;
 	flex-direction: column;
-	justify-content: start;
-	align-items: end;
+	justify-content: space-between;
+	align-items: center;
 	height: 100%;
+	width: 100%;
+	text-align: center;
 }
