fix: ajustando para ocupar todo o espaco width possivel.

--- a/src/app/modules/dashboard-pillbox/dashboard-pillbox.component.html
+++ b/src/app/modules/dashboard-pillbox/dashboard-pillbox.component.html
@@ -88,6 +88,8 @@
 		</div>
 
 		<app-medicine-case-pillbox
+			class="mt-4 w-full"
+			[titleLabel]="'O formato da sua caixa de medicamentos.'"
 			[columns]="pillboxForm.value.columns!"
 			[rows]="pillboxForm.value.rows!"
 		></app-medicine-case-pillbox>
