feat: criado a pagina de ralatorio, ainda sem grafico e lista e adicionado no sidenav e no routes.

--- a/src/app/shared/components/sidenav-dashboard/sidenav-dashboard.component.html
+++ b/src/app/shared/components/sidenav-dashboard/sidenav-dashboard.component.html
@@ -26,7 +26,7 @@
 			</app-button-menu>
 
 			<app-button-menu
-				[description]="'Pillbox'"
+				[description]="'Caixa de Medicamentos'"
 				[selected]="menuSelected === 'Pillbox'"
 				(click)="onMenuSelected('Pillbox')"
 			>
@@ -77,6 +77,18 @@
 				[description]="'Atualizar Medicamentos'"
 				[selected]="menuSelected === 'Update Medication'"
 				(click)="onMenuSelected('Update Medication')"
+			>
+				<app-icon
+					[src]="'/assets/images/medication-icon.svg'"
+					[alt]="'image add medication'"
+					[classes]="'h-6 w-6 ml-2 mr-2'"
+				/>
+			</app-button-menu>
+
+			<app-button-menu
+				[description]="'Relatório'"
+				[selected]="menuSelected === 'Report'"
+				(click)="onMenuSelected('Report')"
 			>
 				<app-icon
 					[src]="'/assets/images/medication-icon.svg'"
