--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,7 +1,11 @@
 <div class="dashboard-container flex flex-col p-4">
 	<div #toastContainer></div>
+	<div #dialogContainer></div>
 	<div class="grid grid-cols-12 gap-4">
-		<app-card-info-user class="col-span-3 h-72"></app-card-info-user>
+		<app-card-info-user
+			class="col-span-3 h-72"
+			[user]="userInfo"
+		></app-card-info-user>
 		<app-card-reminder class="col-span-3 h-72"></app-card-reminder>
 		<app-calendar-week class="col-span-6 h-72"></app-calendar-week>
 	</div>
