refactor: modificado para usar a deretiva @for, e atualizando um arrays de bool e nao um array de string.

--- a/src/app/shared/components/week-days-selector/week-days-selector.component.html
+++ b/src/app/shared/components/week-days-selector/week-days-selector.component.html
@@ -6,12 +6,15 @@
 			>Selecione os Dias da Semana</label
 		>
 	</div>
+
+	@for (day of daysOfWeek; track $index) {
 	<button
-		*ngFor="let day of daysOfWeek"
+		type="button"
 		class="day-button"
-		[class.selected]="selectedDays.includes(day)"
-		(click)="toggleDaySelection(day)"
+		[class.selected]="selectedDays[$index]"
+		(click)="toggleDaySelection($index)"
 	>
 		{{ day }}
 	</button>
+	}
 </div>
