refactor: modificado para usar a deretiva @for.

--- a/src/app/shared/components/form-time-input-list/form-time-input-list.component.html
+++ b/src/app/shared/components/form-time-input-list/form-time-input-list.component.html
@@ -5,22 +5,24 @@
 		>Horários</label
 	>
 
-	<div class="form-row-timer" *ngFor="let t of time; let i = index">
+	@for (t of time; track $index) {
+	<div class="form-row-timer">
 		<input
 			type="time"
-			[(ngModel)]="time[i]"
-			name="time-{{ i }}"
+			[(ngModel)]="time[$index]"
+			name="time-{{ $index }}"
 			class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
 		/>
 
 		<button
-			(click)="removeTime(i)"
+			(click)="removeTime($index)"
 			type="button"
 			class="flex w-28 justify-center rounded-md bg-gray-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-red-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700"
 		>
 			Remover
 		</button>
 	</div>
+	}
 
 	<button
 		(click)="addTime()"
