--- a/src/app/shared/components/medicine-case-pillbox/medicine-case-pillbox.component.html
+++ b/src/app/shared/components/medicine-case-pillbox/medicine-case-pillbox.component.html
@@ -2,7 +2,6 @@
 	<div class="widget-header">
 		<h2 class="widget-title">{{ titleLabel }}</h2>
 	</div>
-
 	<div
 		class="pills-grid mt-4"
 		[style.gridTemplateColumns]="'repeat(' + columns + ', 1fr)'"
@@ -11,7 +10,7 @@
 		<div
 			*ngFor="let index of createRange(rows * columns); let i = index"
 			class="pill-box"
-			[class.selected]="selectedItems.includes(i)"
+			[class.selected]="selectedIndex === i"
 			(click)="toggleSelection(i)"
 		>
 			{{ i + 1 }}
