--- a/src/app/modules/dashboard-medication/dashboard-medication.component.html
+++ b/src/app/modules/dashboard-medication/dashboard-medication.component.html
@@ -1,4 +1,6 @@
 <ng-template #toastContainer></ng-template>
+<app-loader [isLoading]="loading"></app-loader>
+<ng-template #dialogContainer></ng-template>
 <div class="container-pillbox">
 	<div class="header">
 		<img
@@ -7,7 +9,7 @@
 			alt="Logo"
 		/>
 		<div class="title-and-subtitle-container">
-			<h1 class="title">Adicionar Novo Medicamento</h1>
+			<h1 class="title">Adicionar Novo Medicamento oi</h1>
 			<h3 class="subtitle">
 				Insira corretamente os dados abaixo para garantir uma gestão
 				eficaz do seu tratamento. <br />
@@ -15,7 +17,7 @@
 		</div>
 	</div>
 
-	<div
+	<form
 		class="form-container"
 		[formGroup]="medicationForm"
 		(ngSubmit)="onSubmitMedicationForm()"
@@ -38,9 +40,14 @@
 				id="pillbox"
 				required
 			>
-				<option value="">Selecione</option>
-				<option value="pillbox1">Caixa 1</option>
-				<option value="pillbox2">Caixa 2</option>
+				<option value="" disabled>
+					Selecione a Caixa de Medicamento
+				</option>
+				@for (pillbox of listCase; track $index) {
+				<option value="{{ $index }}">
+					{{ pillbox.case_name }}
+				</option>
+				}
 			</select>
 		</div>
 
@@ -50,8 +57,9 @@
 			[titleLabel]="
 				'Selecione um compartimento no qual vai adicionar o medicamento'
 			"
-			[columns]="1"
-			[rows]="1"
+			[columns]="column"
+			[rows]="row"
+			(selectedItemChange)="onSelectedItemPillboxChange($event)"
 		></app-medicine-case-pillbox>
 
 		<!-- Name Medication & QTN medic compart & QTN medic use -->
@@ -122,11 +130,39 @@
 			</div>
 		</div>
 
+		<div class="form-row">
+			<div class="w-full">
+				<div>
+					<label
+						for="description_pill"
+						class="block text-base font-semibold leading-6 text-gray-900"
+						>Observação pro medicamento</label
+					>
+				</div>
+				<div class="mt-2">
+					<textarea
+						name="description_pill"
+						id="description_pill"
+						cols="30"
+						rows="5"
+						id="description_pill"
+						name="description_pill"
+						formControlName="description_pill"
+						required
+						class="mt-2 block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
+					></textarea>
+				</div>
+			</div>
+		</div>
+
 		<!-- Dates -->
-		<app-week-days-selector></app-week-days-selector>
+		<app-week-days-selector (selectionChange)="onSelectionChange($event)">
+		</app-week-days-selector>
 
 		<!-- Form Time List -->
-		<app-form-time-input-list></app-form-time-input-list>
+		<app-form-time-input-list
+			(timeChange)="onTimeChange($event)"
+		></app-form-time-input-list>
 
 		<!-- Button Cancel & Save -->
 		<div class="form-row mt-4">
@@ -144,5 +180,5 @@
 				Salvar
 			</button>
 		</div>
-	</div>
+	</form>
 </div>
