refactor: alterado agora para lista de medicamentos.

--- a/src/app/shared/components/sidenav-dashboard/sidenav-dashboard.component.html
+++ b/src/app/shared/components/sidenav-dashboard/sidenav-dashboard.component.html
@@ -62,9 +62,9 @@
 			</app-button-menu>
 
 			<app-button-menu
-				[description]="'Lista de Alarmes'"
-				[selected]="menuSelected === 'List Alarms'"
-				(click)="onMenuSelected('List Alarms')"
+				[description]="'Lista de Medicamentos'"
+				[selected]="menuSelected === 'List Medications'"
+				(click)="onMenuSelected('List Medications')"
 			>
 				<app-icon
 					[src]="'/assets/images/settings-icon.svg'"
