fix: adicionado para enviar o case id e o alarm id para pagina de update medication.

--- a/src/app/modules/dashboard-list-medications/dashboard-list-medications.component.html
+++ b/src/app/modules/dashboard-list-medications/dashboard-list-medications.component.html
@@ -47,7 +47,8 @@
 							[queryParams]="{
 								compartment: alarm.compartment_id,
 								medication: alarm.medication_id,
-								case: alarm.case_id
+								alarm: alarm.alarm_id,
+								case: alarm.case_id,
 							}"
 							href="#"
 							class="font-medium text-blue-600 dark:text-blue-500 hover:text-blue-300"
