--- a/src/app/shared/components/form-time-input-list/form-time-input-list.component.html
+++ b/src/app/shared/components/form-time-input-list/form-time-input-list.component.html
@@ -5,11 +5,11 @@
 		>Horários</label
 	>
 
-	@for (t of time; track $index) {
+	@for (t of times; track $index) {
 	<div class="form-row-timer">
 		<input
 			type="time"
-			[(ngModel)]="time[$index]"
+			[(ngModel)]="times[$index]"
 			name="time-{{ $index }}"
 			class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
 		/>
