--- a/src/app/shared/components/bar-chart/bar-chart.component.html
+++ b/src/app/shared/components/bar-chart/bar-chart.component.html
@@ -1,8 +1,11 @@
 <div class="block h-full w-full">
 	<canvas
 		baseChart
-		[data]="barChartData"
-		[options]="barChartOptions"
+		[labels]="labels"
+		[datasets]="datasets"
+		[options]="{
+			responsive: true,
+		}"
 		[plugins]="barChartPlugins"
 		[legend]="barChartLegend"
 		[type]="'bar'"
