--- a/src/app/modules/dashboard-report/dashboard-report.component.html
+++ b/src/app/modules/dashboard-report/dashboard-report.component.html
@@ -1,1 +1,59 @@
-<p>dashboard-report works!</p>
+<ng-template #toastContainer></ng-template>
+<app-loader [isLoading]="loading"></app-loader>
+<div class="dashboard-report-container">
+	@if (!loading) {
+	<app-bar-chart
+		class="chart-container"
+		[datasets]="datasets"
+		[labels]="labels"
+	></app-bar-chart>
+	}
+
+	<div class="container-list">
+		<h2 class="font-bold text-2xl">Lista de Medicamentos</h2>
+		<!-- Table Medications -->
+		<div class="relative mt-4 rounded-lg overflow-x-hidden border-2">
+			<table class="min-w-full divide-y divide-gray-200">
+				<thead class="bg-gray-50 sticky top-0 z-10">
+					<tr>
+						@for (title of tableHeaders; track $index) { @if
+						($index%2 == 0) {
+						<th
+							scope="col"
+							class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider"
+						>
+							{{ title }}
+						</th>
+						} @else {
+						<th
+							scope="col"
+							class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider bg-gray-300"
+						>
+							{{ title }}
+						</th>
+						} }
+					</tr>
+				</thead>
+				<tbody class="bg-white divide-y divide-gray-200">
+					@for (historicMedication of historicMedicationsForReport;
+					track $index) {
+					<tr class="text-center">
+						<td class="px-6 py-4 whitespace-nowrap">
+							{{ historicMedication.name }}
+						</td>
+						<td class="px-6 py-4 whitespace-nowrap bg-gray-300">
+							{{ historicMedication.total_pill_take }}
+						</td>
+						<td class="px-6 py-4 whitespace-nowrap">
+							{{ historicMedication.durationInDays }} Dias
+						</td>
+						<td class="px-6 py-4 whitespace-nowrap bg-gray-300">
+							{{ historicMedication.active }}
+						</td>
+					</tr>
+					}
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
