--- a/src/app/shared/components/form-time-input-list/form-time-input-list.component.html
+++ b/src/app/shared/components/form-time-input-list/form-time-input-list.component.html
@@ -10,6 +10,7 @@
 		<input
 			type="time"
 			[(ngModel)]="times[$index]"
+			(ngModelChange)="updateTime($event, $index)"
 			name="time-{{ $index }}"
 			class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
 		/>
