--- a/src/app/modules/dashboard/components/card-medication-pillbox/card-medication-pillbox.component.html
+++ b/src/app/modules/dashboard/components/card-medication-pillbox/card-medication-pillbox.component.html
@@ -1,14 +1,47 @@
 <div class="widget-container">
 	<div class="widget-header">
 		<h2 class="widget-title">Caixa de Medicamentos</h2>
-		<button class="edit-button">O</button>
+		<button
+			class="edit-button"
+			[routerLink]="'/dashboard/pillboxes'"
+			routerLinkActive="active"
+		>
+			<app-icon
+				[src]="'../../../../../assets/images/info-icon.svg'"
+				class="icon"
+				[alt]="'Editar'"
+			></app-icon>
+		</button>
 	</div>
-	<app-select></app-select>
-	<div class="pills-grid" data-num-pills="0">
-		<div class="pill-box selected">1</div>
-		<div class="pill-box">2</div>
-		<div class="pill-box">3</div>
-		<div class="pill-box">4</div>
-		<div class="pill-box">5</div>
+	<!-- Label Pillbox -->
+	<form class="w-full" [formGroup]="selectForm">
+		<!-- Single Select -->
+		<select
+			class="mt-2 block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
+			data-toggle="select"
+			formControlName="pillbox"
+			name="pillbox"
+			id="pillbox"
+			required
+		>
+			<option value="" disabled>Selecione a Caixa de Medicamento</option>
+			@for (pillbox of listCase; track $index) {
+			<option value="{{ $index }}">
+				{{ pillbox.case_name }}
+			</option>
+			}
+		</select>
+	</form>
+	<!-- Pillbox -->
+	<div
+		class="pills-grid mt-4"
+		[style.gridTemplateColumns]="'repeat(' + columns + ', 1fr)'"
+		[style.gridTemplateRows]="'repeat(' + rows + ', 1fr)'"
+	>
+		@for (index of createRange(rows * columns); track $index) {
+		<div class="pill-box">
+			{{ index + 1 }}
+		</div>
+		}
 	</div>
 </div>
