--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
 	<div class="grid grid-cols-12 gap-4 mt-4">
 		<app-list-medications class="col-span-6 h-96"></app-list-medications>
 		<app-card-medication-pillbox
-			class="col-span-6 h-96"
+			class="col-span-6 h-auto"
 		></app-card-medication-pillbox>
 	</div>
 </div>
