--- a/src/app/shared/components/list-medications/list-medications.component.css
+++ b/src/app/shared/components/list-medications/list-medications.component.css
@@ -13,65 +13,25 @@
 	width: 100%;
 }
 
+/* Widget Header */
+.widget-header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
 /* WidgetTitle */
 .widget-title {
 	margin: 0;
-	padding-bottom: 24px;
 	color: #000; /* Substitua pela cor desejada */
 	font-size: 18px;
 	font-weight: bold;
 	text-align: left;
 }
 
-/* Header */
-.header {
-	display: flex;
-	justify-content: space-between;
-	font-weight: bold;
-	color: #000; /* Substitua pela cor deepBlack do seu tema */
+.action-button:hover {
+	opacity: 0.8;
 }
-
-/* ColumnName, ColumnAlarms, ColumnQuantity, ColumnCompartiment */
-.column-name,
-.column-alarms,
-.column-quantity,
-.column-compartiment {
-	flex: 2;
-}
-
-.column-quantity,
-.column-compartiment {
-	text-align: center;
-}
-
-/* MedicationRow */
-.medication-row {
-	display: flex;
-	justify-content: space-between;
-	padding: 10px 0;
-}
-
-/* MedicationName, MedicationAlarms, MedicationQuantity, MedicationCompartiment */
-.medication-name,
-.medication-alarms,
-.medication-quantity,
-.medication-compartiment {
-	flex: 2;
-}
-
-.medication-quantity,
-.medication-compartiment {
-	text-align: center;
-}
-
-/* MedicationsAlamrsBody */
-.medications-alarms-body {
-	width: 100%;
-	height: calc(100% - 40px); /* Ajuste a altura conforme necessário */
-	overflow: scroll;
-	overflow-x: hidden;
-
-	/* Estilização para Firefox */
-	scrollbar-width: inherit;
-	scrollbar-color: #c1c1c1 #f0f0f0;
+.icon {
+	filter: invert(100%);
 }
