--- a/src/app/shared/components/list-medications/list-medications.component.html
+++ b/src/app/shared/components/list-medications/list-medications.component.html
@@ -1,17 +1,59 @@
 <div class="widget-container">
-	<h2 class="widget-title">Medicamentos</h2>
-	<div class="header">
-		<div class="column-name">Nome</div>
-		<div class="column-alarms">Alarmes</div>
-		<div class="column-quantity">Quantidade</div>
-		<div class="column-compartiment">Compartimento(s)</div>
+	<div class="widget-header">
+		<h2 class="widget-title">Medicamentos</h2>
+		<button
+			class="list-button"
+			[routerLink]="'/dashboard/medications'"
+			routerLinkActive="active"
+		>
+			<app-icon
+				[src]="'../../../../../assets/images/info-icon.svg'"
+				class="icon"
+				[alt]="'List'"
+			></app-icon>
+		</button>
 	</div>
-	<div class="medications-alarms-body">
-		<div class="medication-row" *ngFor="let med of medications">
-			<span class="medication-name">{{ med.name }}</span>
-			<span class="medication-alarms">{{ med.alarms.join(", ") }}</span>
-			<span class="medication-quantity">{{ med.quantity }}</span>
-			<span class="medication-compartiment">{{ med.compartiment }}</span>
-		</div>
+	<!-- Table Medications -->
+	<div class="relative rounded-lg overflow-x-hidden border-2">
+		<table class="min-w-full divide-y divide-gray-200">
+			<thead class="bg-gray-50 sticky top-0 z-10">
+				<tr>
+					@for (title of tableHeaders; track $index) { @if ($index%2
+					== 0) {
+					<th
+						scope="col"
+						class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider"
+					>
+						{{ title }}
+					</th>
+					} @else {
+					<th
+						scope="col"
+						class="px-6 py-3 text-center text-xs font-medium text-gray-500 uppercase tracking-wider bg-gray-300"
+					>
+						{{ title }}
+					</th>
+					} }
+				</tr>
+			</thead>
+			<tbody class="bg-white divide-y divide-gray-200">
+				@for (medication of medications; track $index) {
+				<tr class="text-center">
+					<td class="px-6 py-4 whitespace-nowrap">
+						{{ medication.name }}
+					</td>
+					<td class="px-6 py-4 whitespace-nowrap bg-gray-300">
+						{{ medication.alarms }}
+					</td>
+					<td class="px-6 py-4 whitespace-nowrap">
+						{{ medication.quantity }}
+					</td>
+					<td class="px-6 py-4 whitespace-nowrap bg-gray-300">
+						{{ medication.compartiment }}
+					</td>
+				</tr>
+				}
+			</tbody>
+		</table>
 	</div>
 </div>
