feat: o z-index agora foi aumentado para 100, pois estava na mesma linha do medicamentos.

--- a/src/app/shared/components/dialog/dialog.component.html
+++ b/src/app/shared/components/dialog/dialog.component.html
@@ -1,5 +1,5 @@
 <div
-	class="relative z-10"
+	class="relative container-dialog"
 	aria-labelledby="modal-title"
 	role="dialog"
 	aria-modal="true"
