--- a/src/app/modules/dashboard-pillbox/dashboard-pillbox.component.html
+++ b/src/app/modules/dashboard-pillbox/dashboard-pillbox.component.html
@@ -94,7 +94,7 @@
 			<div class="w-full">
 				<div>
 					<label
-						for="mac"
+						for="mac_address"
 						class="block text-base font-semibold leading-6 text-gray-900"
 					>
 						Qual o endereço MAC do seu Dispositivo?(Opcional)</label
@@ -102,12 +102,11 @@
 				</div>
 				<div class="mt-2">
 					<input
-						id="mac"
-						name="mac"
+						id="mac_address"
+						name="mac_address"
 						type="text"
 						placeholder="Exemplo: 00-B0-D0-63-C2-26"
-						formControlName="mac"
-						required
+						formControlName="mac_address"
 						class="block w-full rounded-md py-2 px-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:to-blue-700 sm:text-sm sm:leading-5"
 					/>
 				</div>
