feat: adicionado a imagem correta, arrumado o texto e navega para lista de pillboxes caso for salvo com sucesso.

--- a/src/app/modules/dashboard-pillbox/dashboard-pillbox.component.html
+++ b/src/app/modules/dashboard-pillbox/dashboard-pillbox.component.html
@@ -5,13 +5,13 @@
 	<div class="header">
 		<img
 			class="logo"
-			src="../../../assets/images/perfil-icon.svg"
+			src="../../../assets/images/medication-icon.svg"
 			alt="Logo"
 		/>
 		<div class="title-and-subtitle-container">
-			<h1 class="title">Adicionar Novo Pillbox</h1>
+			<h1 class="title">Adicionar uma Nova Caixa de Medicamentos</h1>
 			<h3 class="subtitle">
-				Insira corretamente o formato da sua pillbox para garantir uma
+				Insira o formato da sua caixa de medicamentos para garantir uma
 				gestão eficaz do seu tratamento. <br />
 			</h3>
 		</div>
@@ -146,7 +146,7 @@
 		<div class="form-row mt-4">
 			<button
 				type="button"
-				routerLink="/dashboard"
+				routerLink="/dashboard/pillboxes"
 				routerLinkActive="active"
 				class="flex w-1/12 justify-center rounded-md bg-gray-500 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700"
 			>
